--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -46,6 +46,8 @@ http {
     proxy_set_header Host $http_host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
+    # 从本质上说，upstream属于handler，只是他不产生自己的内容，而是通过请求后端服务器得到内容，所以才称为upstream（上游）
+    # 请求并取得响应内容的整个过程已经被封装到nginx内部
     upstream n9e.monapi {
         server monapi:5800;
         keepalive 10;
